--- a/web4test/src/main/webapp/edit/css/hend.css
+++ b/web4test/src/main/webapp/edit/css/hend.css
@@ -30,7 +30,7 @@ body {
 	text-align: center;
 	position: absolute;
 	width: 220px;
-	visibility : hidden; 
+	/* visibility : hidden; */ 
 }
 
 .id .h {
@@ -39,7 +39,8 @@ body {
 	margin-bottom : 50px;
 }
 
-.id .text {
+.authNo {
+	font-size: xx-large;
 	bottom: 10px;
 	width: 140px;
 	height: 47px;
@@ -72,8 +73,8 @@ body {
 	left: 150px;
 	width: 170px;
 	height: 170px;
-	position: absolute; 
-	visibility : hidden; 
+	position: absolute;
+	display: none;
 }
 /* 핸드 모션 끝 */
 
@@ -83,7 +84,6 @@ body {
 	width: 60px;
 	height: 60px;
 	position: absolute; 
-	visibility : hidden;   
 }
 /* 셋팅 끝 */
 
@@ -93,7 +93,6 @@ body {
 	width: 80px;
 	height: 80px;
 	position: absolute;  
-	visibility : hidden;  
 }
 /* 턴 끝 */
 
@@ -104,7 +103,6 @@ body {
 	width: 80px;
 	height: 80px;
 	position: absolute;  
-	visibility : hidden;  
 }
 /* 턴 끝 */
 
@@ -115,7 +113,7 @@ body {
 	width: 350px;
 	height: 500px;
 	position: absolute;   
-	visibility : hidden; 
+	display: none;
 }
 
 .setMemo .setMemoime{
